[gd_scene load_steps=4 format=3 uid="uid://x73sj5hs4o6"]

[ext_resource type="Script" path="res://scripts/ui/EndGameScreen.gd" id="1_3w0np"]

[sub_resource type="Animation" id="Animation_d1pv6"]
resource_name = "result_in"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.287174, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_60a27"]
resource_name = "result_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 0.7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jd2xc"]
_data = {
"result_in": SubResource("Animation_d1pv6"),
"result_out": SubResource("Animation_60a27")
}

[node name="EndGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3w0np")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="PanelContainer" type="PanelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 150)

[node name="MarginContainer" type="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResultLabel" type="Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "¡VICTORIA DE LAS BLANCAS!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PlayAgainButton" type="Button"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Jugar de Nuevo"

[node name="ShowSummaryButton" type="Button"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Ver Resumen"

[node name="MainMenuButton" type="Button"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Volver al Menú Principal"

[node name="ExitButton" type="Button"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Salir del Juego"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jd2xc")
}
